--- a/Cube Attack.csproj
+++ b/Cube Attack.csproj
@@ -43,9 +43,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ICipher.cs" />
     <Compile Include="Operation.cs" />
     <Compile Include="Param.cs" />
     <Compile Include="Matrix.cs" />
+    <Compile Include="PresentCipher.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Vector.cs" />
@@ -54,6 +56,8 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="papers\" />
+    <Folder Include="report\" />
     <Folder Include="result\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
