--- a/Cube Attack.csproj
+++ b/Cube Attack.csproj
@@ -47,6 +47,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AcornCipher.cs" />
+    <Compile Include="CubeAttackBC.cs" />
+    <Compile Include="CubeAttackSC.cs" />
     <Compile Include="ICipher.cs" />
     <Compile Include="Operation.cs" />
     <Compile Include="Param.cs" />
