--- a/Cube Attack.csproj
+++ b/Cube Attack.csproj
@@ -47,6 +47,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AcornCipher.cs" />
+    <Compile Include="CHight.cs" />
+    <Compile Include="CPiccolo.cs" />
     <Compile Include="CubeAttack.cs" />
     <Compile Include="CubeAttackSettings.cs" />
     <Compile Include="ICipher.cs" />
